--- a/package.json
+++ b/package.json
@@ -58,7 +58,17 @@
     },
     "dependencies": {
         "@jupyterlab/application": "^4.0.0",
-        "@jupyterlab/settingregistry": "^4.0.0"
+        "@jupyterlab/apputils": "^4.0.0",
+        "@jupyterlab/docmanager": "^4.0.0",
+        "@jupyterlab/docregistry": "^4.0.0",
+        "@jupyterlab/filebrowser": "^4.0.0",
+        "@jupyterlab/markdownviewer": "^4.0.0",
+        "@jupyterlab/services": "^4.0.0",
+        "@jupyterlab/settingregistry": "^4.0.0",
+        "@lumino/coreutils": "^2.0.0",
+        "@lumino/messaging": "^2.0.0",
+        "@lumino/signaling": "^2.0.0",
+        "@lumino/widgets": "^2.0.0"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
