--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
         "@jupyterlab/docmanager": "^4.0.0",
         "@jupyterlab/docregistry": "^4.0.0",
         "@jupyterlab/filebrowser": "^4.0.0",
+        "@jupyterlab/launcher": "^4.3.4",
+        "@jupyterlab/mainmenu": "^4.3.4",
         "@jupyterlab/markdownviewer": "^4.0.0",
         "@jupyterlab/services": "^4.0.0",
         "@jupyterlab/settingregistry": "^4.0.0",
