--- a/package.json
+++ b/package.json
@@ -57,15 +57,16 @@
         "watch:labextension": "jupyter labextension watch ."
     },
     "dependencies": {
+        "@jupyter/ydoc": "^1.0.0",
         "@jupyterlab/application": "^4.0.0",
-        "@jupyterlab/settingregistry": "^4.0.0",
+        "@jupyterlab/apputils": "^4.0.0",
         "@jupyterlab/codeeditor": "^4.0.0",
         "@jupyterlab/docregistry": "^4.0.0",
         "@jupyterlab/filebrowser": "^4.0.0",
-        "@jupyterlab/apputils": "^4.0.0",
-        "@jupyter/ydoc": "^1.0.0",
-        "@lumino/widgets": "^2.0.0",
-        "@lumino/signaling": "^2.0.0"
+        "@jupyterlab/markdownviewer": "^4.3.4",
+        "@jupyterlab/settingregistry": "^4.0.0",
+        "@lumino/signaling": "^2.0.0",
+        "@lumino/widgets": "^2.0.0"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.0.0",
