add docManager to model

--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
         "@jupyterlab/filebrowser": "^4.0.0",
         "@jupyterlab/markdownviewer": "^4.3.4",
         "@jupyterlab/settingregistry": "^4.0.0",
+        "@jupyterlab/ui-components": "^4.0.0",
         "@lumino/signaling": "^2.0.0",
         "@lumino/widgets": "^2.0.0"
     },
